--- a/package.json
+++ b/package.json
@@ -7,17 +7,8 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
-  "dependencies": {
-    "react": "16.3.1",
-    "react-native": "0.55.4",
-    "react-native-create-bridge": "^2.0.1"
-  },
-  "devDependencies": {
-    "babel-jest": "22.4.3",
-    "babel-preset-react-native": "4.0.0",
-    "jest": "22.4.3",
-    "react-test-renderer": "16.3.1"
-  },
+  "dependencies": {},
+  "devDependencies": {},
   "jest": {
     "preset": "react-native"
   }
